# advent-readme-stars

./: Dockerfile  LICENSE  README.md  action.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  readme-stars.yml  test-local.yml
src/advent_readme_stars/: __main__.py  advent.py  constants.py  progress.py  update.py
tests/: conftest.py  helpers.py  test_advent.py  test_advent_readme_stars.py  test_progress.py  test_update.py
tests/data/: example1.json  example2.json  example3.json
